[package]
name = "kakikun"
version = "0.1.0"
authors = ["file-acomplaint <42694673+file-acomplaint@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_buffered_backend = "0.4.1"
image = "0.23.12"
regex = "1"


[dependencies.cursive]
version = "0.15"
default-features = false

[features]
default = ["cursive/termion-backend"]
windows = ["cursive/crossterm-backend"]
