[package]
name = "kakikun"
version = "0.1.0"
authors = ["fi-le <info@fi-le.net>"]
edition = "2018"
description = "A tool to draw in the console with text and colour."
repository = "https://github.com/file-acomplaint/kakikun"
homepage = "https://fi-le.net/programming#kakikun"
license = "MIT"
keywords = ["TUI", "image", "art", "graphics"]
categories = ["command-line-utilities", "multimedia::images", "graphics"]


[dependencies]
cursive_buffered_backend = "0.6.1"
image = "0.23.12"
regex = "1"

[dependencies.cursive]
version = "0.20"
default-features = false

[features]
default = ["cursive/termion-backend"]
windows = ["cursive/crossterm-backend"]
